objects/Sales_Budget_vs_Customer_Revenue__c/Sales_Budget_vs_Customer_Revenue__c.object-meta.xml
<CustomObject>
    <label>Sales Budget vs Customer Revenue</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Budget vs Customer Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>