objects/Sales_Budget_vs_Customer_Revenue__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Budget vs Customer Revenue</relationshipLabel>
    <relationshipName>Sales_Budget_vs_Customer_Revenue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>