objects/Sales_Budget_vs_Customer_Revenue__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>Customer__r.Subsidiary_Company__r.Name &amp; ';' &amp; Customer__r.AccountNumber &amp; ';' &amp; TEXT(Year__c) &amp; ';' &amp; Period_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>