objects/Sales_Budget_vs_Customer_Revenue__c/fields/Period_No__c.field-meta.xml
<CustomField>
    <fullName>Period_No__c</fullName>
    <label>Period No.</label>
    <length>2</length>
    <type>Text</type>
</CustomField>