objects/Sales_Budget_vs_Customer_Revenue__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Sales Budget vs Customer Revenue</relationshipLabel>
    <relationshipName>Sales_Budget_vs_Customer_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>