objects/Sales_Budget_vs_Customer_Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>Customer__c</columns>
    <columns>Period_No__c</columns>
    <columns>Year__c</columns>
    <columns>Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>